--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             <div class="flex flex-col md:flex-row justify-between items-center">
                 <div class="md:w-1/2 mb-12 md:mb-0">
                     <h1 class="text-4xl md:text-6xl font-bold mb-4 relative pb-8 hero-title">
-                        <span class="block mb-2 text-white">Étudiant à EPITECH Bénin</span>
+                        <span class="block mb-2 text-white">Andy SAGBO</span>
                         <span class="block text-transparent bg-clip-text bg-gradient-to-r from-neonPurple to-neonCyan glow-text">Développeur Passionné</span>
                     </h1>
                     <h2 class="text-3xl md:text-5xl font-bold mb-6">
