--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="relative">
                         <div class="absolute -inset-4 rounded-full bg-gradient-to-r from-neonPurple to-neonCyan blur-xl opacity-20 animate-pulse-slow"></div>
                         <div class="relative rounded-full overflow-hidden border-4 border-white shadow-glow-purple">
-                            <div class="bg-gray-200 border-2 border-dashed rounded-full w-64 h-64 md:w-80 md:h-80"></div>
+                            <img src="photo_pro.jpeg" alt="Photo de profil" class="w-64 h-64 md:w-80 md:h-80 object-cover rounded-full" style="object-position: center 20%;" />
                         </div>
                         
                         <div class="absolute top-4 right-4 bg-cardBg p-4 rounded-full border border-neonCyan shadow-glow-cyan">
