--- a/index.html
+++ b/index.html
@@ -510,7 +510,7 @@
                     <div class="bg-cardBg rounded-2xl p-8">
                         <form id="contact-form" action="https://formsubmit.co/el/revira" method="POST">
                             <input type="text" name="_honey" style="display:none">
-                            <input type="hidden" name="_captcha" value="false">
+                            <!-- <input type="hidden" name="_captcha" value="false"> -->
                             <input type="hidden" name="_next" value="https://andysags13.github.io/merci.html">
                             <div class="mb-6">
                                 <label for="name" class="block text-gray-300 mb-2">Votre Nom <span class="text-neonPurple">*</span></label>
