--- a/index.html
+++ b/index.html
@@ -508,9 +508,8 @@
             <div class="flex flex-col lg:flex-row gap-12">
                 <div class="lg:w-1/2">
                     <div class="bg-cardBg rounded-2xl p-8">
-                        <form id="contact-form" action="https://formsubmit.co/el/revira" method="POST">
-                            <input type="text" name="_honey" style="display:none">
-                            <!-- <input type="hidden" name="_captcha" value="false"> -->
+                        <form id="contact-form" action="https://formspree.io/f/xqabeoez" method="POST">
+                            <!-- <input type="text" name="_honey" style="display:none"> -->
                             <input type="hidden" name="_next" value="https://andysags13.github.io/merci.html">
                             <div class="mb-6">
                                 <label for="name" class="block text-gray-300 mb-2">Votre Nom <span class="text-neonPurple">*</span></label>
