--- a/index.html
+++ b/index.html
@@ -104,6 +104,9 @@
                         <a href="#contact" class="px-6 py-3 rounded-md font-medium border border-neonPurple text-white hover:bg-neonPurple hover:bg-opacity-20 transition-all">
                             Me Contacter
                         </a>
+                        <a href="cv.pdf" download class="px-6 py-3 rounded-md font-medium bg-gradient-to-r from-neonCyan to-cyan-800 text-white hover:shadow-glow-cyan transition-all flex items-center">
+                            <i class="fas fa-download mr-2"></i> Télécharger mon CV
+                        </a>
                     </div>
                 </div>
                 <div class="md:w-1/2 flex justify-center">
