--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ANDY SAGBO // ARCHITECTE_SYSTÈME</title>
-    <meta name="description" content="Portfolio d'Andy SAGBO - Développeur Expert C, C++, React, IA & Robotique" />
+    <title>ANDY SAGBO </title>
+    <meta name="description" content="Portfolio d'Andy SAGBO - Développeur C, C++, React, IA & Robotique" />
     
     <!-- Fonts: Clash Display (Brutalist) & JetBrains Mono (Code) -->
     <link href="https://api.fontshare.com/v2/css?f[]=clash-display@200,400,500,600,700&display=swap" rel="stylesheet">
